<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:gravity="center_horizontal"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:id="@+id/Mic_activity_internalstorage_filename"/>

        <ToggleButton
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:textOn="@string/persistent_file"
            android:textOff="@string/cache_file"
            android:id="@+id/Mic_activity_internalstorage_filetype"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_file"
            android:id="@+id/Mic_activity_internalstorage_create"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_file"
            android:id="@+id/Mic_activity_internalstorage_delete"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:text="@string/file_contents" />

        <EditText
            android:id="@+id/Mic_activity_internalstorage_filecontents"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="0.75"
            android:lines="5"
            android:scrollbars="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Mic_activity_internalstorage_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_file" />

        <Button
            android:id="@+id/Mic_activity_internalstorage_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_file" />


    </LinearLayout>

</LinearLayout>